[package]
name = "zinifier"
version = "0.1.0"
edition = "2021"

[lib]
name = "zinifier"
path = "src/lib.rs"

[[bin]]
name = "zinifier"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
camino = "1.1"
clap = { version = "4.5", features = [ "derive" ], optional = true }
# Only used for typst errors
ecow = "*"
glob = { version = "0.3", optional = true }
log = "0.4"
markdownmacros = { path = "../markdownmacros" }
markdown-it = "0.6"
pretty_env_logger = { version = "0.4", optional = true }
serde = { version = "1", features = [ "derive" ] }
snafu = "0.8"
tokio = { version = "1", features = [ "rt", "time" ], optional = true }
toml = "0.8"
typst = { git = "https://github.com/zinifier/typst.git", branch = "public-cli-crate" }
typst-cli = { git = "https://github.com/zinifier/typst.git", branch = "public-cli-crate" }
typst-library = { git = "https://github.com/zinifier/typst.git", branch = "public-cli-crate" }
typst-pdf = { git = "https://github.com/zinifier/typst.git", branch = "public-cli-crate" }
typst-render = { git = "https://github.com/zinifier/typst.git", branch = "public-cli-crate" }
watchexec = { version = "4.1", optional = true }
watchexec-signals = { version = "3", optional = true }
# Only used for typst World
time = "0.3.36"
rayon = "1.10.0"
derive_more = "0.99.18"
tiny-skia = "0.11.4"
markdown-it-footnote = "0.2.0"

[features]
default = [ "cli" ]
cli = [ "watch", "watchexec", "watchexec-signals", "tokio", "glob", "clap", "pretty_env_logger" ]
watch = []
